--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
 <html lang='en'>
-<img src='/data/flag_embed.jpg' alt='img broke oopsie doopsie' width='420' height='318'/>
+<img src='/flag_embed.jpg' alt='img broke oopsie doopsie' width='420' height='318'/>
  </body>
 </html>
